compiler/fir/analysis-tests/testData/resolve/errors/noSelectorExpression.kt
fun foo(x: Int) {
    x.<!SYNTAX!><!>
}